ghost.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: treehub
  name: ghost
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 2368
  selector:
    app: ghost
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: treehub
  name: ghost
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
