www.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: treehub
  name: www
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: www
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: treehub
  name: www
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
      - name: www
        image: treehub/www:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: cloudsql-proxy
        image: b.gcr.io/cloudsql-docker/gce-proxy:1.05
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=treehub-154014:us-central1:treehub=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-oauth-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
      - name: cloudsql-oauth-credentials
        secret:
          secretName: cloudsql-oauth-credentials
      - name: ssl-certs
        hostPath:
          path: /etc/ssl/certs
      - name: cloudsql
        emptyDir:
